<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dds_visualizer</name>
  <version>0.0.0</version>
  <description>
    A package to visualize DDS discovery, message serialization, and QoS effects.
    Perfect for understanding ROS2 middleware internals.
  </description>
  <maintainer email="pavan@learning.dds">pavan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <!-- For DDS monitoring -->
  <depend>rosidl_runtime_cpp</depend>
  <depend>rmw</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
