<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- 
  ROS 2 PACKAGE MANIFEST FILE (package.xml)
  This file defines package metadata, dependencies, and build configuration
-->

<package format="3">  <!-- Package format version 3 (recommended for ROS 2) -->
  
  <!-- BASIC PACKAGE METADATA -->
  <name>ros2_learning_pkg</name>  <!-- Package name - MUST match CMakeLists.txt project name -->
  <version>0.0.0</version>        <!-- Package version (major.minor.patch) -->
  <description>Comprehensive ROS2 learning package with examples for topics, services, and actions</description>
  
  <!-- MAINTAINER INFORMATION -->
  <maintainer email="T@example.com">TODO</maintainer>  <!-- Replace with your info -->
  
  <!-- LICENSE INFORMATION -->
  <license>Apache-2.0</license>  <!-- Open source license type -->

  <!-- BUILD DEPENDENCIES -->
  <!-- ament_cmake: Required build system for C++ ROS 2 packages -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- PACKAGE DEPENDENCIES -->
  <!-- 
    The <depend> tag is a shortcut that includes:
    - build_depend: Needed during build
    - build_export_depend: Needed by packages that depend on this package  
    - exec_depend: Needed at runtime
  -->
  <depend>rclcpp</depend>    <!-- ROS 2 C++ Client Library - core dependency -->
  <depend>std_msgs</depend>  <!-- Standard message types (String, Int32, Float64, etc.) -->
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>action_msgs</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>rclcpp_action</depend>

  
   <!-- CUSTOM MESSAGE GENERATION - NOW ACTIVATED -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  

  <!-- 
    OPTIONAL: You can also specify dependencies separately for more control:
    <build_depend>rclcpp</build_depend>
    <build_export_depend>rclcpp</build_export_depend>
    <exec_depend>rclcpp</exec_depend>
  -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- EXPORT SECTION -->
  <!-- Defines how this package is built and exported -->
  <export>
    <build_type>ament_cmake</build_type>  <!-- Build system type -->
  </export>
  
</package>

